# tts-api

./: pyproject.toml  run.bat
tts_api/: __main__.py  config.py  routes.py  tts.py
